--- a/EventRite/wwwroot/browser/css/styles.css
+++ b/EventRite/wwwroot/browser/css/styles.css
@@ -1,4 +1,41 @@
 h1 {
   color: green;
 }
+
+.event-container {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  border-bottom: solid 1px lightgrey;
+}
+
+.event-container > * {
+  margin-left: 3%;
+  margin-right: 3%;
+  width: 94%;
+}
+
+.event-container--image {
+  padding: 0;
+}
+
+.event-container--image img {
+  width: 100%;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.event-container--tickets > button {
+  width: 94%;
+}
+
+.event-container--map {
+  width: 100%;
+  padding: 0px;
+}
+
+.event-container--map iframe {
+  width: 100%;
+  margin-left: 0;
+  margin-right: 0;
+}
 /*# sourceMappingURL=styles.css.map */
