--- a/EventRite/wwwroot/browser/css/styles.css
+++ b/EventRite/wwwroot/browser/css/styles.css
@@ -29,6 +29,52 @@
   z-index: 2;
 }
 
+.search-sec {
+  padding: 2rem;
+  z-index: 10;
+  -webkit-transform: translateY(55px);
+      -ms-transform: translateY(55px);
+          transform: translateY(55px);
+}
+
+.search-field {
+  display: block;
+  width: 100%;
+  font-size: 0.875rem;
+  line-height: 1.5;
+  color: #55595c;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  height: calc(3rem + 2px) !important;
+  border-radius: 0;
+}
+
+.wrn-btn {
+  width: 100%;
+  font-size: 16px;
+  font-weight: 400;
+  text-transform: capitalize;
+  height: calc(3rem + 2px) !important;
+  border-radius: 0;
+}
+
+@media (min-width: 992px) {
+  .search-sec {
+    position: relative;
+    top: -114px;
+  }
+}
+
+@media (max-width: 992px) {
+  .search-sec {
+    -webkit-transform: translateY(0);
+        -ms-transform: translateY(0);
+            transform: translateY(0);
+    background: #1A4668;
+  }
+}
+
 .event-container {
   padding-top: 15px;
   padding-bottom: 15px;
