--- a/EventRite/wwwroot/browser/css/scss/_homepage.scss
+++ b/EventRite/wwwroot/browser/css/scss/_homepage.scss
@@ -1,32 +1,21 @@
 .carousel-fade {
   .carousel-inner {
-    .item {
+    .carousel-item {
       transition-property: opacity;
+
+      img {
+        max-height: 400px;
+        object-fit: cover;
+      }
     }
 
-    .item,
-    .active.left,
-    .active.right {
+    .carousel-item {
       opacity: 0;
     }
 
-    .active,
-    .next.left,
-    .prev.right {
+    .active {
       opacity: 1;
     }
-
-    .next,
-    .prev,
-    .active.left,
-    .active.right {
-      left: 0;
-      transform: translate3d(0, 0, 0);
-    }
-  }
-
-  .carousel-control {
-    z-index: 2;
   }
 }
 
