--- a/EventRite/wwwroot/browser/css/styles.css
+++ b/EventRite/wwwroot/browser/css/styles.css
@@ -7,34 +7,24 @@ p {
   Font-Size: 15px;
 }
 
-.carousel-fade .carousel-inner .item {
+.carousel-fade .carousel-inner .carousel-item {
   -webkit-transition-property: opacity;
+  -o-transition-property: opacity;
   transition-property: opacity;
 }
 
-.carousel-fade .carousel-inner .item,
-.carousel-fade .carousel-inner .active.left,
-.carousel-fade .carousel-inner .active.right {
+.carousel-fade .carousel-inner .carousel-item img {
+  max-height: 400px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.carousel-fade .carousel-inner .carousel-item {
   opacity: 0;
 }
 
-.carousel-fade .carousel-inner .active,
-.carousel-fade .carousel-inner .next.left,
-.carousel-fade .carousel-inner .prev.right {
+.carousel-fade .carousel-inner .active {
   opacity: 1;
-}
-
-.carousel-fade .carousel-inner .next,
-.carousel-fade .carousel-inner .prev,
-.carousel-fade .carousel-inner .active.left,
-.carousel-fade .carousel-inner .active.right {
-  left: 0;
-  -webkit-transform: translate3d(0, 0, 0);
-          transform: translate3d(0, 0, 0);
-}
-
-.carousel-fade .carousel-control {
-  z-index: 2;
 }
 
 .search-sec {
@@ -114,6 +104,26 @@ p {
   width: 100%;
 }
 
+.row.contact {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.card.contact {
+  margin: 1rem;
+  text-align: center;
+}
+
+.jumbotron.post {
+  background-image: -webkit-gradient(linear, right top, left top, from(#000000), to(#7F8C8D));
+  background-image: -o-linear-gradient(right, #000000, #7F8C8D);
+  background-image: linear-gradient(-90deg, #000000, #7F8C8D);
+  text-align: center;
+  margin: 0 auto;
+  color: #f9fbfc;
+}
+
 .bg-dark {
   background-color: #e0004a !important;
 }
@@ -139,6 +149,7 @@ p {
 
 .nav-link::before {
   -webkit-transition: 500ms;
+  -o-transition: 500ms;
   transition: 500ms;
   height: 2px;
   content: "";
@@ -153,24 +164,5 @@ p {
 
 .nav-link:hover::before {
   width: 100%;
-}
-
-.row.contact {
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.card.contact {
-  margin: 1rem;
-  text-align: center;
-}
-
-.jumbotron.post {
-  background-image: -webkit-gradient(linear, right top, left top, from(#000000), to(#7F8C8D));
-  background-image: linear-gradient(-90deg, #000000, #7F8C8D);
-  text-align: center;
-  margin: 0 auto;
-  color: #f9fbfc;
 }
 /*# sourceMappingURL=styles.css.map */
