--- a/EventRite/wwwroot/browser/css/scss/_homepage.scss
+++ b/EventRite/wwwroot/browser/css/scss/_homepage.scss
@@ -51,13 +51,46 @@
   .search-sec {
     position: relative;
     top: -114px;
-    // background: rgba(26, 70, 104, 0.51);
   }
 }
 
 @media (max-width: 992px) {
   .search-sec {
     transform: translateY(0);
-    background: #1A4668;
+    background: $secondry-color;
+  }
+}
+
+.card-container {
+  padding: 0;
+
+  h1 {
+    transform: translateY(-45px);
+  }
+}
+
+.event-card {
+  height: 150px;
+  display: flex;
+  padding: 0;
+  background-color: white;
+  margin-bottom: 20px;
+  box-shadow: 0 3px 7px -1px rgba(#000, .1);
+
+  &:last-of-type {
+    margin-bottom: 50px;
+  }
+
+  .card-image {
+    height: 150px;
+    width: 150px;
+
+    img {
+      max-height: 100%;
+    }
+  }
+
+  .card-content {
+    padding: 10px 20px;
   }
 }
