Creating a collapse contact page

--- a/EventRite/wwwroot/browser/css/scss/_contact.scss
+++ b/EventRite/wwwroot/browser/css/scss/_contact.scss
@@ -1,9 +1,6 @@
-.row.contact {
-    justify-content: center;
+.card.contact{
+    border: #75dbcd 1px solid; 
+    text-decoration: none;
+    margin: 0;
 }
 
-.card.contact{
-    margin: 1rem;
-    text-align: center;
-    border: #75dbcd 1px solid; 
-}
