--- a/EventRite/wwwroot/browser/css/styles.css
+++ b/EventRite/wwwroot/browser/css/styles.css
@@ -41,7 +41,6 @@ p {
   padding: 2rem;
   z-index: 10;
   -webkit-transform: translateY(55px);
-      -ms-transform: translateY(55px);
           transform: translateY(55px);
 }
 
@@ -77,7 +76,6 @@ p {
 @media (max-width: 992px) {
   .search-sec {
     -webkit-transform: translateY(0);
-        -ms-transform: translateY(0);
             transform: translateY(0);
     background: #1A4668;
   }
@@ -114,7 +112,26 @@ p {
   width: 100%;
 }
 
-.bg-dark {
+.row.contact {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.card.contact {
+  margin: 1rem;
+  text-align: center;
+}
+
+.jumbotron.post {
+  background-image: -webkit-gradient(linear, right top, left top, from(#000000), to(#7F8C8D));
+  background-image: linear-gradient(-90deg, #000000, #7F8C8D);
+  text-align: center;
+  margin: 0 auto;
+  color: #f9fbfc;
+}
+
+.navbar.bg-dark {
   background-color: #e0004a !important;
 }
 
@@ -155,22 +172,36 @@ p {
   width: 100%;
 }
 
-.row.contact {
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+/*----------------Gallery-----------*/
+.container-fluid {
+  padding: 50px;
 }
 
-.card.contact {
-  margin: 1rem;
+.container-fluid h2 {
   text-align: center;
+  font-size: 55px;
+  padding-bottom: 25px;
 }
 
-.jumbotron.post {
-  background-image: -webkit-gradient(linear, right top, left top, from(#000000), to(#7F8C8D));
-  background-image: linear-gradient(-90deg, #000000, #7F8C8D);
-  text-align: center;
-  margin: 0 auto;
-  color: #f9fbfc;
+a.col-md-4.gallery {
+  margin: 0;
+  padding: 0 0;
+}
+
+.container.gallery {
+  width: 75%;
+  padding-top: 0;
+}
+
+.img-fluid.galleryimage {
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
+  -webkit-transition: .3s ease-in-out;
+  transition: .3s ease-in-out;
+}
+
+.img-fluid.galleryimage:hover {
+  -webkit-filter: grayscale(0);
+  filter: grayscale(0);
 }
 /*# sourceMappingURL=styles.css.map */
