Added Google Map API to Event Page. Still requires fetching address.

--- a/EventRite/wwwroot/browser/css/scss/_event.scss
+++ b/EventRite/wwwroot/browser/css/scss/_event.scss
@@ -25,7 +25,9 @@
 }
 
 .event-container--map {
-    padding: 0px;
+    margin-bottom: 15px;
+    width: 100%;
+    height: 500px;
 }
 
 .event-container--map iframe {
