--- a/EventRite/wwwroot/browser/css/styles.css
+++ b/EventRite/wwwroot/browser/css/styles.css
@@ -9,7 +9,6 @@ p {
 
 .carousel-fade .carousel-inner .carousel-item {
   -webkit-transition-property: opacity;
-  -o-transition-property: opacity;
   transition-property: opacity;
 }
 
@@ -97,7 +96,9 @@ p {
 }
 
 .event-container--map {
-  padding: 0px;
+  margin-bottom: 15px;
+  width: 100%;
+  height: 500px;
 }
 
 .event-container--map iframe {
@@ -148,7 +149,6 @@ p {
 
 .nav-link::before {
   -webkit-transition: 500ms;
-  -o-transition: 500ms;
   transition: 500ms;
   height: 2px;
   content: "";
