--- a/EventRite/wwwroot/browser/css/scss/_homepage.scss
+++ b/EventRite/wwwroot/browser/css/scss/_homepage.scss
@@ -92,5 +92,14 @@
 
   .card-content {
     padding: 10px 20px;
+    overflow: hidden;
+
+    .card-title {
+      font-weight: bold;
+    }
+
+    .card-description {
+      overflow: hidden;
+    }
   }
 }
