--- a/EventRite/wwwroot/browser/css/styles.css
+++ b/EventRite/wwwroot/browser/css/styles.css
@@ -117,6 +117,15 @@ body {
 
 .event-card .card-content {
   padding: 10px 20px;
+  overflow: hidden;
+}
+
+.event-card .card-content .card-title {
+  font-weight: bold;
+}
+
+.event-card .card-content .card-description {
+  overflow: hidden;
 }
 
 .event-container {
