--- a/EventRite/wwwroot/browser/css/styles.css
+++ b/EventRite/wwwroot/browser/css/styles.css
@@ -14,24 +14,10 @@ body {
   background-color: #f9fbfc;
 }
 
-.carousel-fade .carousel-inner .carousel-item {
-  -webkit-transition-property: opacity;
-  -o-transition-property: opacity;
-  transition-property: opacity;
-}
-
 .carousel-fade .carousel-inner .carousel-item img {
   max-height: 400px;
   -o-object-fit: cover;
      object-fit: cover;
-}
-
-.carousel-fade .carousel-inner .carousel-item {
-  opacity: 0;
-}
-
-.carousel-fade .carousel-inner .active {
-  opacity: 1;
 }
 
 .search-sec {
@@ -161,17 +147,6 @@ body {
   width: 100%;
 }
 
-.row.contact {
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.card.contact {
-  margin: 1rem;
-  text-align: center;
-}
-
 .jumbotron.post {
   background-image: -webkit-gradient(linear, right top, left top, from(#000000), to(#7F8C8D));
   background-image: -o-linear-gradient(right, #000000, #7F8C8D);
@@ -248,11 +223,18 @@ a.col-md-4.gallery {
   -webkit-filter: grayscale(100%);
   filter: grayscale(100%);
   -webkit-transition: .3s ease-in-out;
+  -o-transition: .3s ease-in-out;
   transition: .3s ease-in-out;
 }
 
 .img-fluid.galleryimage:hover {
   -webkit-filter: grayscale(0);
   filter: grayscale(0);
+}
+
+.card.contact {
+  border: #75dbcd 1px solid;
+  text-decoration: none;
+  margin: 0;
 }
 /*# sourceMappingURL=styles.css.map */
