--- a/EventRite/wwwroot/browser/css/styles.css
+++ b/EventRite/wwwroot/browser/css/styles.css
@@ -9,7 +9,6 @@ p {
 
 .carousel-fade .carousel-inner .carousel-item {
   -webkit-transition-property: opacity;
-  -o-transition-property: opacity;
   transition-property: opacity;
 }
 
@@ -137,7 +136,6 @@ p {
 
 .nav-link::before {
   -webkit-transition: 500ms;
-  -o-transition: 500ms;
   transition: 500ms;
   height: 2px;
   content: "";
@@ -154,15 +152,54 @@ p {
   width: 100%;
 }
 
-.row.contact {
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+.card .contact {
+  border: none;
+  text-decoration: none;
+  margin: 0;
 }
 
-.card.contact {
-  margin: 1rem;
-  text-align: center;
-  border: #75dbcd 1px solid;
+i {
+  vertical-align: middle;
+}
+
+.card.contact .card-header {
+  padding-left: 50px;
+  background-color: #f9fbfc;
+}
+
+.card.contact .card-body {
+  padding-left: 70px;
+}
+
+.btn-link:hover, .btn-link:focus {
+  color: #44bba4;
+  text-decoration: none;
+}
+
+.card button {
+  font-size: 30px;
+  color: #75dbcd;
+}
+
+#socials button {
+  color: #000000;
+}
+
+#socials .btn-outline-light {
+  border: none;
+}
+
+input {
+  border-radius: 0;
+}
+
+.card .btn-primary {
+  background-color: #44bba4;
+  color: white;
+  border: none;
+}
+
+.material-icons {
+  font-size: 35px;
 }
 /*# sourceMappingURL=styles.css.map */
