--- a/EventRite/wwwroot/browser/css/styles.css
+++ b/EventRite/wwwroot/browser/css/styles.css
@@ -215,17 +215,11 @@ body {
   width: 100%;
 }
 
-.card .contact {
-  border: none;
-  text-decoration: none;
-  margin: 0;
 /*----------------Gallery-----------*/
 .container-fluid {
   padding: 50px;
 }
 
-i {
-  vertical-align: middle;
 .container-fluid h2 {
   text-align: center;
   font-size: 55px;
@@ -254,10 +248,14 @@ a.col-md-4.gallery {
   filter: grayscale(0);
 }
 
-.card.contact {
-  border: #75dbcd 1px solid;
+.card .contact {
+  border: none;
   text-decoration: none;
   margin: 0;
+}
+
+i {
+  vertical-align: middle;
 }
 
 .card.contact .card-header {
