--- a/EventRite/wwwroot/browser/css/scss/_login.scss
+++ b/EventRite/wwwroot/browser/css/scss/_login.scss
@@ -4,15 +4,31 @@
     width:412px;
     margin:10vh auto;
     background-color:#f3f3f3;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    box-shadow: 2px 4px 6px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
+
+#logreg-forms.new-account{
+    width:600px;
+}
+
 #logreg-forms form {
     width: 100%;
     max-width: 410px;
     padding: 15px;
     margin: auto;
 }
+
+#logreg-forms.new-account form {
+    width: 100%;
+    max-width: 550px;
+    padding: 15px;
+    margin: auto;
+}
+
+
+
+
 #logreg-forms .form-control {
     position: relative;
     box-sizing: border-box;
@@ -22,13 +38,14 @@
 }
 #logreg-forms .form-control:focus { z-index: 2; }
 #logreg-forms .form-signin input[type="email"] {
-    margin-bottom: -1px;
+    margin-bottom: 15px;
     border-bottom-right-radius: 0;
     border-bottom-left-radius: 0;
 }
 #logreg-forms .form-signin input[type="password"] {
     border-top-left-radius: 0;
     border-top-right-radius: 0;
+    margin-bottom:15px;
 }
 
 #logreg-forms .social-login{
@@ -106,4 +123,18 @@
         content:'Google+';
     }
     
+}
+
+#logreg-forms.new-account input{
+    margin-bottom:15px;
+}
+
+
+.btn.btn-success.btn-block{
+    background-color: $accent-color1;
+    border:none;
+}
+
+.btn.btn-success.btn-block:hover {
+    background-color: $accent-color2;
 }
