--- a/EventRite/wwwroot/browser/css/styles.css
+++ b/EventRite/wwwroot/browser/css/styles.css
@@ -249,6 +249,7 @@ a.col-md-4.gallery {
 
 .card.contact .card-body {
   padding-left: 70px;
+  border: none;
 }
 
 .btn-link:hover, .btn-link:focus {
@@ -281,6 +282,21 @@ input {
 
 .material-icons {
   font-size: 35px;
+}
+
+#faqs a {
+  text-decoration: none;
+  color: #000000;
+}
+
+#faqs {
+  margin: 0;
+}
+
+#faqs i {
+  font-size: 20px;
+  color: #44bba4;
+  -webkit-transform: rotate(-45deg);
 }
 
 /* sign in FORM */
