linked login to new account

--- a/EventRite/wwwroot/browser/css/styles.css
+++ b/EventRite/wwwroot/browser/css/styles.css
@@ -367,8 +367,11 @@ input {
 
 #logreg-forms a {
   display: block;
-  padding-top: 10px;
-  color: lightseagreen;
+  color: white;
+}
+
+a#forgot_pswd {
+  color: black;
 }
 
 #logreg-form .lines {
@@ -447,5 +450,14 @@ input {
 
 .btn.btn-success.btn-block:hover {
   background-color: #44bba4;
+}
+
+.btn.btn-newacct.btn-block {
+  background-color: #44bba4;
+}
+
+.btn.btn-newacct.btn-block:hover {
+  background-color: #e0004a;
+  text-decoration: none;
 }
 /*# sourceMappingURL=styles.css.map */
