--- a/EventRite/wwwroot/browser/css/scss/_login.scss
+++ b/EventRite/wwwroot/browser/css/scss/_login.scss
@@ -62,10 +62,12 @@
 
 #logreg-forms a{
     display: block;
-    padding-top:10px;
-    color:lightseagreen;
+    color:white;
 }
 
+a#forgot_pswd{
+    color:black;
+}
 #logreg-form .lines{
     width:200px;
     border:1px solid red;
@@ -137,4 +139,13 @@
 
 .btn.btn-success.btn-block:hover {
     background-color: $accent-color2;
+}
+
+.btn.btn-newacct.btn-block{
+    background-color:$accent-color2;
+}
+
+.btn.btn-newacct.btn-block:hover {
+    background-color: $accent-color1;
+    text-decoration: none;
 }
