--- a/EventRite/wwwroot/browser/css/styles.css
+++ b/EventRite/wwwroot/browser/css/styles.css
@@ -476,4 +476,42 @@ a#forgot_pswd {
   background-color: #e0004a;
   text-decoration: none;
 }
+
+footer {
+  background-color: #343a40;
+}
+
+footer h4 {
+  color: #e0004a;
+}
+
+footer .col-sm-4 {
+  padding: 30px 40px 0 40px;
+}
+
+footer p {
+  color: #f9fbfc;
+}
+
+footer .row .copyright {
+  margin: 0 auto;
+}
+
+footer .copyright p {
+  font-size: 0.8rem;
+  text-align: center;
+}
+
+footer .nav-link::before {
+  background-color: #e0004a;
+}
+
+footer .nav-link:hover::before {
+  width: 70%;
+}
+
+footer .nav-link {
+  margin: 0;
+  padding: 8px 0px;
+}
 /*# sourceMappingURL=styles.css.map */
