--- a/EventRite/wwwroot/browser/css/scss/_login.scss
+++ b/EventRite/wwwroot/browser/css/scss/_login.scss
@@ -3,9 +3,11 @@
 #logreg-forms{
     width:412px;
     margin:10vh auto;
-    background-color:#f3f3f3;
-    box-shadow: 2px 4px 6px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    background-color:$secondry-color;
+   // background-color:#f3f3f3;
+    //box-shadow: 2px 4px 6px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    border-radius:10px;
+    border: 1px solid $accent-color1;
 }
 
 #logreg-forms.new-account{
@@ -25,8 +27,6 @@
     padding: 15px;
     margin: auto;
 }
-
-
 
 
 #logreg-forms .form-control {
