--- a/EventRite/wwwroot/browser/css/styles.css
+++ b/EventRite/wwwroot/browser/css/styles.css
@@ -318,11 +318,9 @@ input {
 #logreg-forms {
   width: 412px;
   margin: 10vh auto;
-  background-color: #f3f3f3;
-  -webkit-box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-          box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  background-color: #f9fbfc;
+  border-radius: 10px;
+  border: 1px solid #e0004a;
 }
 
 #logreg-forms.new-account {
