Renamed The Low Down and centred titles

--- a/EventRite/wwwroot/browser/css/scss/_contact.scss
+++ b/EventRite/wwwroot/browser/css/scss/_contact.scss
@@ -14,14 +14,22 @@ i {
     padding-left: 70px;
     border: none;
 }
+
+#collapseTwo {
+    text-align: center;
+}
+
+.card.contact h2 {
+    text-align: center;
+}
 .btn-link, button#myAccount a:link
 {&:hover, &:focus {
-    color: $accent-color2;
+    color: $accent-color3;
     text-decoration: none;
 }}
 .card button{
 font-size: 30px;
-color: $accent-color3;
+color: $primary-color;
 }
 #socials{ 
     button {
