--- a/TheLineUp/public/css/styles.css
+++ b/TheLineUp/public/css/styles.css
@@ -24,7 +24,6 @@ body {
   padding: 2rem;
   z-index: 10;
   -webkit-transform: translateY(55px);
-      -ms-transform: translateY(55px);
           transform: translateY(55px);
 }
 
@@ -61,7 +60,6 @@ body {
 @media (max-width: 992px) {
   .search-sec {
     -webkit-transform: translateY(0);
-        -ms-transform: translateY(0);
             transform: translateY(0);
     background: #f9fbfc;
   }
@@ -73,7 +71,6 @@ body {
 
 .card-container h1 {
   -webkit-transform: translateY(-45px);
-      -ms-transform: translateY(-45px);
           transform: translateY(-45px);
 }
 
@@ -171,7 +168,6 @@ body {
 
 .jumbotron.post {
   background-image: -webkit-gradient(linear, right top, left top, from(#000000), to(#7F8C8D));
-  background-image: -o-linear-gradient(right, #000000, #7F8C8D);
   background-image: linear-gradient(-90deg, #000000, #7F8C8D);
   text-align: center;
   margin: 0 auto;
@@ -203,7 +199,6 @@ body {
 
 .nav-link::before {
   -webkit-transition: 500ms;
-  -o-transition: 500ms;
   transition: 500ms;
   height: 2px;
   content: "";
@@ -245,7 +240,6 @@ a.col-md-4.gallery {
   -webkit-filter: grayscale(100%);
   filter: grayscale(100%);
   -webkit-transition: .3s ease-in-out;
-  -o-transition: .3s ease-in-out;
   transition: .3s ease-in-out;
 }
 
@@ -274,14 +268,22 @@ i {
   border: none;
 }
 
-.btn-link:hover, .btn-link:focus {
-  color: #44bba4;
+#collapseTwo {
+  text-align: center;
+}
+
+.card.contact h2 {
+  text-align: center;
+}
+
+.btn-link:hover, .btn-link:focus, button#myAccount a:link:hover, button#myAccount a:link:focus {
+  color: #75dbcd;
   text-decoration: none;
 }
 
 .card button {
   font-size: 30px;
-  color: #75dbcd;
+  color: #000000;
 }
 
 #socials button {
@@ -296,10 +298,11 @@ input {
   border-radius: 0;
 }
 
-.card .btn-primary {
+.card .btn-primary, button#myAccount a {
   background-color: #44bba4;
   color: white;
   border: none;
+  font-size: 1rem;
 }
 
 .material-icons {
@@ -319,8 +322,6 @@ input {
   font-size: 20px;
   color: #44bba4;
   -webkit-transform: rotate(-45deg);
-      -ms-transform: rotate(-45deg);
-          transform: rotate(-45deg);
 }
 
 /* sign in FORM */
@@ -331,7 +332,6 @@ input {
   -webkit-box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
           box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  -o-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 
@@ -489,7 +489,6 @@ a#forgot_pswd {
 
 footer {
   background-color: #343a40;
-  min-height: 360px;
 }
 
 footer h4 {
