added categories to homepage

--- a/TheLineUp/public/css/scss/_categories.scss
+++ b/TheLineUp/public/css/scss/_categories.scss
@@ -2,13 +2,14 @@
 
 .container-fluid{
     
-    padding:50px;
+    padding:0 50px;
     }
     
     .container-fluid h2{
         text-align:center;
-        font-size:55px;
+        font-size:35px;
         padding-bottom:25px;
+       
       
     }
     a.col-md-4.gallery{
