--- a/TheLineUp/public/css/scss/_contact.scss
+++ b/TheLineUp/public/css/scss/_contact.scss
@@ -13,10 +13,13 @@ i {
 .card.contact .card-body {
     padding-left: 70px;
     border: none;
-}
-
-#collapseTwo {
     text-align: center;
+}
+.col-md-6.col-md-offset-3#contact {
+margin: 0 auto;
+}
+.form-group .col-md-12#contact-submit {
+    text-align: left; 
 }
 
 .card.contact h2 {
@@ -27,6 +30,11 @@ i {
     color: $accent-color3;
     text-decoration: none;
 }}
+
+.btn.btn-outline-light:hover {
+    background-color: $accent-color2;
+    opacity: 0.3; 
+}
 .card button{
 font-size: 30px;
 color: $primary-color;
