Basic create event form template

--- a/TheLineUp/public/css/scss/_dashboard.scss
+++ b/TheLineUp/public/css/scss/_dashboard.scss
@@ -11,6 +11,10 @@
     width: 100%;
 }
 
+.dashboard-form-textarea {
+    width: 100%;
+}
+
 .dashboard-form-button {
     color: black;
     margin: 10px 15px 10px 0;
