--- a/TheLineUp/public/css/styles.css
+++ b/TheLineUp/public/css/styles.css
@@ -585,4 +585,8 @@ footer .nav-link {
 .dashboard-link-container div {
   padding: 0;
 }
+
+.container.notfoundpage .row {
+  margin: 0 auto;
+}
 /*# sourceMappingURL=styles.css.map */
