Contact updates - working on advertising section

--- a/TheLineUp/public/css/scss/_contact.scss
+++ b/TheLineUp/public/css/scss/_contact.scss
@@ -19,7 +19,10 @@ i {
 margin: 0 auto;
 }
 .form-group .col-md-12#contact-submit {
-    text-align: left; 
+    text-align: center; 
+}
+#contact .col-md-9 {
+    margin: 0 auto; 
 }
 
 .card.contact h2 {
