--- a/TheLineUp/public/css/scss/_categories.scss
+++ b/TheLineUp/public/css/scss/_categories.scss
@@ -1,7 +1,6 @@
 /*----------------Gallery-----------*/
 
 .container-fluid{
-    
     padding:0 50px;
     }
     
@@ -20,6 +19,7 @@
     .container.gallery{
         width:75%;
         padding-top:0;
+        padding-bottom:100px;
     }
     
     .img-fluid.galleryimage{
@@ -32,5 +32,7 @@
         -webkit-filter: grayscale(0);
           filter: grayscale(0);
       }
+
+    
     
       
