--- a/TheLineUp/public/css/styles.css
+++ b/TheLineUp/public/css/styles.css
@@ -234,6 +234,7 @@ a.col-md-4.gallery {
 .container.gallery {
   width: 75%;
   padding-top: 0;
+  padding-bottom: 100px;
 }
 
 .img-fluid.galleryimage {
