--- a/TheLineUp/public/css/scss/_homepage.scss
+++ b/TheLineUp/public/css/scss/_homepage.scss
@@ -1,7 +1,6 @@
 .carousel-fade {
   .carousel-inner {
     .carousel-item {
-
       img {
         max-height: 400px;
         object-fit: cover;
@@ -67,7 +66,7 @@
   padding: 0;
   background-color: white;
   margin-bottom: 20px;
-  box-shadow: 0 3px 7px -1px rgba(#000, .1);
+  box-shadow: 0 3px 7px -1px rgba(#000, 0.1);
 
   &:last-of-type {
     margin-bottom: 50px;
@@ -106,5 +105,40 @@
         font-size: 0.8rem;
       }
     }
+  }
+}
+.lds-ring {
+  display: inline-block;
+  position: relative;
+  width: 64px;
+  height: 64px;
+}
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 51px;
+  height: 51px;
+  margin: 6px;
+  border: 6px solid black;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: black transparent transparent transparent;
+}
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
