Advertising packaged complete. The Low Down page rearranged

--- a/TheLineUp/public/css/scss/_contact.scss
+++ b/TheLineUp/public/css/scss/_contact.scss
@@ -15,6 +15,16 @@ i {
     border: none;
     text-align: center;
 }
+.card-group.ads{
+    width: 80%;
+    margin: 0 auto;
+}
+.card.ad {
+    margin: 20px !important;
+}
+.card.ad .card-body.ad {
+    padding: 30px;
+}
 .col-md-6.col-md-offset-3#contact {
 margin: 0 auto;
 }
