--- a/TheLineUp/public/css/scss/_footer.scss
+++ b/TheLineUp/public/css/scss/_footer.scss
@@ -3,7 +3,7 @@ footer {
 } 
 footer {
     h4 {
-        color: $accent-color1;
+        color: $secondry-color;
 } .col-sm-4 {
     padding: 30px 40px 0 40px; 
 } p {
