--- a/TheLineUp/public/css/scss/_global.scss
+++ b/TheLineUp/public/css/scss/_global.scss
@@ -19,5 +19,8 @@ p {
 body {
   background-color: $secondry-color;
   padding-top:78px;
+  position:relative;
+  padding-bottom:315px;
+  min-height:100vh;
   
 }
