--- a/TheLineUp/public/css/styles.css
+++ b/TheLineUp/public/css/styles.css
@@ -13,6 +13,9 @@ p {
 body {
   background-color: #f9fbfc;
   padding-top: 78px;
+  position: relative;
+  padding-bottom: 315px;
+  min-height: 100vh;
 }
 
 .carousel-fade .carousel-inner .carousel-item img {
@@ -25,7 +28,6 @@ body {
   padding: 2rem;
   z-index: 10;
   -webkit-transform: translateY(55px);
-      -ms-transform: translateY(55px);
           transform: translateY(55px);
 }
 
@@ -62,7 +64,6 @@ body {
 @media (max-width: 992px) {
   .search-sec {
     -webkit-transform: translateY(0);
-        -ms-transform: translateY(0);
             transform: translateY(0);
     background: #f9fbfc;
   }
@@ -74,7 +75,6 @@ body {
 
 .card-container h1 {
   -webkit-transform: translateY(-45px);
-      -ms-transform: translateY(-45px);
           transform: translateY(-45px);
 }
 
@@ -231,7 +231,6 @@ body {
 
 .jumbotron.post {
   background-image: -webkit-gradient(linear, right top, left top, from(#000000), to(#7F8C8D));
-  background-image: -o-linear-gradient(right, #000000, #7F8C8D);
   background-image: linear-gradient(-90deg, #000000, #7F8C8D);
   text-align: center;
   margin: 0 auto;
@@ -267,7 +266,6 @@ body {
 
 .nav-link::before {
   -webkit-transition: 500ms;
-  -o-transition: 500ms;
   transition: 500ms;
   height: 2px;
   content: "";
@@ -310,7 +308,6 @@ a.col-md-4.gallery {
   -webkit-filter: grayscale(100%);
   filter: grayscale(100%);
   -webkit-transition: .3s ease-in-out;
-  -o-transition: .3s ease-in-out;
   transition: .3s ease-in-out;
 }
 
@@ -417,7 +414,6 @@ input {
   -webkit-box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
           box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  -o-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 
@@ -579,6 +575,9 @@ a#forgot_pswd {
 
 footer {
   background-color: #343a40;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
 
 footer h4 {
