--- a/TheLineUp/public/css/styles.css
+++ b/TheLineUp/public/css/styles.css
@@ -138,6 +138,13 @@ body {
   color: white;
 }
 
+.autocomplete-name:hover,
+.autocomplete-location:hover {
+  cursor: pointer;
+  background: blue;
+  color: white;
+}
+
 .lds-ring {
   display: inline-block;
   position: relative;
