--- a/TheLineUp/public/css/scss/_headernav.scss
+++ b/TheLineUp/public/css/scss/_headernav.scss
@@ -44,3 +44,8 @@
   .nav-link:hover::before {
     width: 100%;
   }
+
+  .navbar-collapse.collapse.show{
+    background-color: $accent-color1;
+ 
+  }
