--- a/TheLineUp/public/css/styles.css
+++ b/TheLineUp/public/css/styles.css
@@ -348,6 +348,7 @@ a.col-md-4.gallery {
 .container.contact-info h3 {
   text-align: center;
   padding: 20px;
+  font-style: italic;
 }
 
 .card .contact {
