--- a/TheLineUp/public/css/scss/_headernav.scss
+++ b/TheLineUp/public/css/scss/_headernav.scss
@@ -2,14 +2,14 @@
     background-color: $accent-color1!important;
 }
 
-.navbar{
+.navbar.main{
   height: 80px;
 }
 
 
 
 
-.nav-link {
+.nav-link.main {
     font-weight: bold;
     text-transform: uppercase;
     text-decoration: none;
@@ -21,14 +21,14 @@
     
   }
   
-  .navbar-dark .navbar-nav .nav-link{
+  .navbar-dark.main .navbar-nav.main .nav-link.main{
       color:$secondry-color;
   }
-  .nav-link:hover {
+  .nav-link.main:hover {
     opacity: 1;
   }
   
-  .nav-link::before {
+  .nav-link.main::before {
     transition: 500ms;
     height: 2px;
     content: "";
@@ -36,12 +36,12 @@
     background-color:black;
   }
   
-  .nav-link::before {
+  .nav-link.main::before {
     width: 0%;
     bottom: 10px;
   }
   
-  .nav-link:hover::before {
+  .nav-link.main:hover::before {
     width: 100%;
   }
 
