--- a/TheLineUp/public/css/styles.css
+++ b/TheLineUp/public/css/styles.css
@@ -254,11 +254,11 @@ main {
   background-color: #e0004a !important;
 }
 
-.navbar {
+.navbar.main {
   height: 80px;
 }
 
-.nav-link {
+.nav-link.main {
   font-weight: bold;
   text-transform: uppercase;
   text-decoration: none;
@@ -269,15 +269,15 @@ main {
   color: white;
 }
 
-.navbar-dark .navbar-nav .nav-link {
+.navbar-dark.main .navbar-nav.main .nav-link.main {
   color: #f9fbfc;
 }
 
-.nav-link:hover {
+.nav-link.main:hover {
   opacity: 1;
 }
 
-.nav-link::before {
+.nav-link.main::before {
   -webkit-transition: 500ms;
   transition: 500ms;
   height: 2px;
@@ -286,12 +286,12 @@ main {
   background-color: black;
 }
 
-.nav-link::before {
+.nav-link.main::before {
   width: 0%;
   bottom: 10px;
 }
 
-.nav-link:hover::before {
+.nav-link.main:hover::before {
   width: 100%;
 }
 
@@ -643,9 +643,16 @@ footer .nav-link {
   padding: 8px 0px;
 }
 
+.dashboard-container {
+  padding: 5%;
+}
+
+.dashboard.nav .nav-item .nav-link {
+  color: #DF0049;
+}
+
 .dashboard-title {
-  margin: 20px 0 20px 0;
-  border-bottom: solid 1px lightgrey;
+  margin-top: 15px;
 }
 
 .dashboard-form {
@@ -671,7 +678,7 @@ footer .nav-link {
 
 .dashboard-link, .dashboard-link:hover {
   color: black;
-  margin: 10px 15px 10px 0;
+  margin: 20px 15px 20px 0;
   border: solid 1px black;
   border-radius: 5px;
   padding: 5px 10px;
