--- a/TheLineUp/public/css/styles.css
+++ b/TheLineUp/public/css/styles.css
@@ -77,6 +77,19 @@ main {
   }
 }
 
+.search-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .card-container {
   padding: 0;
 }
@@ -86,49 +99,7 @@ main {
           transform: translateY(-45px);
 }
 
-.event-card {
-  height: 150px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding: 0;
-  background-color: white;
-  margin-bottom: 20px;
-  -webkit-box-shadow: 0 3px 7px -1px rgba(0, 0, 0, 0.1);
-          box-shadow: 0 3px 7px -1px rgba(0, 0, 0, 0.1);
-}
-
-.event-card:last-of-type {
-  margin-bottom: 50px;
-}
-
-.event-card .card-image {
-  height: 150px;
-  width: 200px;
-}
-
-.event-card .card-image img {
-  height: 150px;
-  width: 200px;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-.event-card .card-content {
-  padding: 10px 20px;
-}
-
-.event-card .card-content .card-title {
-  margin: 0;
-  font-weight: bold;
-  padding: 0;
-}
-
-.event-card .card-content .card-description {
-  margin: 5px 0;
-}
-
-.event-card .card-content .event-details {
+.event-details {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -137,9 +108,24 @@ main {
           justify-content: space-between;
 }
 
-.event-card .card-content .event-details p {
+.event-details p {
   display: inline;
   font-size: 0.8rem;
+}
+
+.card.mb-12 {
+  margin: 10px 0;
+}
+
+.col-md-4.search img {
+  max-height: 200px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+#no-results {
+  font-size: 2rem;
+  padding-bottom: 20px;
 }
 
 .selected {
@@ -179,6 +165,7 @@ main {
   position: relative;
   width: 64px;
   height: 64px;
+  margin: 0 auto;
 }
 
 .lds-ring div {
@@ -288,6 +275,10 @@ main {
 
 li.nav-item.main {
   background-color: #e0004a;
+}
+
+img.navbar-brand.mr-auto {
+  padding-left: 10px !important;
 }
 
 .nav-link.main {
@@ -659,6 +650,7 @@ footer {
   background-color: #343a40;
   bottom: 0;
   width: 100%;
+  margin-top: 20px;
 }
 
 footer h4 {
